# clockio.v2

./: README.md  pyproject.toml
clock/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
clock/migrations/: 0001_initial.py  0002_alter_clock_description.py  0003_alter_clock_employee.py
core/: settings.py  urls.py
employees/: serializers.py
