[tool.poetry]
name = "restclockio"
version = "0.1.0"
description = ""
authors = ["João Victor Inocêncio Macedo de Aguiar"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
