[tool.poetry]
name = "restclockio"
version = "0.1.0"
description = ""
authors = ["João Victor Inocêncio Macedo de Aguiar"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"
djangorestframework = "^3.14.0"
Markdown = "^3.4.4"
django-filter = "^23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
